logs/Slang/generated/yosys/simple_process.sv.log
name: simple_process
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/process.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/process.v:8:8: error: language feature not yet supported
always @* begin
       ^~
